--- a/_config.yml
+++ b/_config.yml
@@ -14,35 +14,36 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Aquib Qureshi # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Happy Learning # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  This blog is created to share the learnings from field, also sharing the re-usable asset which I create.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://qureshiaquib.github.io"
+url: 'https://qureshiaquib.github.io'
 
 github:
-  username: github_username # change to your github username
+  username: qureshiaquib # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+# twitter:
+#  username: AquibQureshi26 # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: Aquib Qureshi
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://www.linkedin.com/in/qureshiaquib/
+    # https://twitter.com/AquibQureshi26 # change to your twitter homepage
+    # https://github.com/qureshiaquib # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    #  https://www.linkedin.com/in/qureshiaquib/
 
 google_site_verification: # fill in to your verification string
 
@@ -50,7 +51,7 @@ google_site_verification: # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: 'G-71NJB7YR9X'
 
 # Prefer color scheme setting.
 #
@@ -73,17 +74,13 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
-
-# The URL of the site-wide social preview image used in SEO `og:image` meta tag.
-# It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+avatar: https://avatars.githubusercontent.com/u/40310215?v=4
 
 # boolean type, the global switch for TOC in posts.
 toc: true
 
 comments:
-  active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  active: "giscus" # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -93,10 +90,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: "qureshiaquib/qureshiaquib.github.io" # <gh-username>/<repo>
+    repo_id: "R_kgDOLDOSwg"
+    category: "Posts"
+    category_id: "DIC_kwDOLDOSws4CcVV4"
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
