--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/40310215?v=4
+avatar:
 
 # boolean type, the global switch for TOC in posts.
 toc: true
