--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Aquib Qureshi # the main title
+title: Azure Doctor # the main title
 
 tagline: Happy Learning # it will display as the sub-title
 
@@ -74,7 +74,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/image/IMGnewdestroyedsite11012024.jpg
+avatar: /assets/logo.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
