--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/image/logos.jpg
+avatar: /assets/image/OIG-s.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
