--- a/_config.yml
+++ b/_config.yml
@@ -90,10 +90,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: "qureshiaquib/qureshiaquib.github.io" # <gh-username>/<repo>
-    repo_id: "R_kgDOLDOSwg"
+    repo: "qureshiaquib/azuredoctor" # <gh-username>/<repo>
+    repo_id: "R_kgDOLCtE8Q"
     category: "Posts"
-    category_id: "DIC_kwDOLDOSws4CcVV4"
+    category_id: "DIC_kwDOLCtE8c4CcbZ9"
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
