--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
 title: Azure Doctor # the main title
 
-tagline: Happy Learning # it will display as the sub-title
+tagline: Learn Azure, For Beginners and Experts # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   This blog is created to share the learnings from field related to Azure.
@@ -27,23 +27,24 @@ url: 'https://www.azuredoctor.com'
 
 github:
   username: qureshiaquib # change to your github username
-
-# twitter:
-#  username: AquibQureshi26 # change to your twitter username
+twitter:
+  username: AquibQureshi26 # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Aquib Qureshi
-  email: example@domain.com # change to your email address
+  email: aquib.roks@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
+    # https://www.linkedin.com/in/qureshiaquib/
+    - https://github.com/qureshiaquib
+    - https://twitter.com/AquibQureshi26 # change to your twitter homepage
     - https://www.linkedin.com/in/qureshiaquib/
-    # https://twitter.com/AquibQureshi26 # change to your twitter homepage
-    # https://github.com/qureshiaquib # change to your github homepage
+    # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    #  https://www.linkedin.com/in/qureshiaquib/
+    
 
 google_site_verification: # fill in to your verification string
 
