--- a/_config.yml
+++ b/_config.yml
@@ -91,10 +91,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: "qureshiaquib/azuredoctor" # <gh-username>/<repo>
-    repo_id: "R_kgDOLCtE8Q"
+    repo: "qureshiaquib/azuredoctorcomments" # <gh-username>/<repo>
+    repo_id: "R_kgDOMSXfgw"
     category: "Posts"
-    category_id: "DIC_kwDOLCtE8c4CcbZ9"
+    category_id: "DIC_kwDOMSXfg84Cgl7D"
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
