--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ google_site_verification: # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id:
+  id: 'G-71NJB7YR9X'
 
 # Prefer color scheme setting.
 #
